--- a/Contract/开发时间表.md
+++ b/Contract/开发时间表.md
@@ -7,7 +7,7 @@
 ### 第1周：本地合约测试跑通
 - 在本地文件夹Contract/APPLUSD使用hardhat搭建EVM节点
 - 本地节点部署测试USDT合约，任何人都可以mint
-- 部署通用可升级APPLUSD合约，并添加购买/赎回函数(deposit/redeem)
+- 部署通用可升级APPLUSD合约，decimals为0，并添加购买/赎回函数(deposit/redeem)
 - 编写一个获取APPL价格合约，先固定兑换比例USDT/APPL 260:1
 - 写出完整的js部署以及测试脚本
 
