--- a/docs/普通用户购买赎回流程.md
+++ b/docs/普通用户购买赎回流程.md
@@ -1,13 +1,13 @@
-📋 合约信息:
-   TestUSDT: 0x33eF4194D6c97A87153A12b5d6cDFA0f63b2D17F 小数点：18
-   AAVEUSD代理: 0x73986Fe90e93E6b6296c3E128052C060C06e5049 小数点：0
-   AAVEUSD实现: 0xFCD48E56eC8d0A29b729d1B66BE0939d88488Df8
-   Chainlink预言机: AAVE/USD（简化版）小数点：8
+- 📋 合约信息:
+   - TestUSDT: 0x33eF4194D6c97A87153A12b5d6cDFA0f63b2D17F 小数点：18
+   - AAVEUSD代理: 0x73986Fe90e93E6b6296c3E128052C060C06e5049 小数点：0
+   - AAVEUSD实现: 0xFCD48E56eC8d0A29b729d1B66BE0939d88488Df8
+   - Chainlink预言机: AAVE/USD（简化版）小数点：8
 
-🔗 区块链浏览器链接:
-   TestUSDT: https://testnet.bscscan.com/address/0x33eF4194D6c97A87153A12b5d6cDFA0f63b2D17F
-   AAVEUSD代理: https://testnet.bscscan.com/address/0x73986Fe90e93E6b6296c3E128052C060C06e5049
-   AAVEUSD实现: https://testnet.bscscan.com/address/0xFCD48E56eC8d0A29b729d1B66BE0939d88488Df8
+- 🔗 区块链浏览器链接:
+   - TestUSDT: https://testnet.bscscan.com/address/0x33eF4194D6c97A87153A12b5d6cDFA0f63b2D17F
+   - AAVEUSD代理: https://testnet.bscscan.com/address/0x73986Fe90e93E6b6296c3E128052C060C06e5049
+   - AAVEUSD实现: https://testnet.bscscan.com/address/0xFCD48E56eC8d0A29b729d1B66BE0939d88488Df8
 
 # 用户购买/赎回流程
 # 购买流程
